--- a/cap1/v-if.html
+++ b/cap1/v-if.html
@@ -25,7 +25,7 @@
     </body>
     <script src="https://unpkg.com/vue"></script>
     <script>
-        var app = new new Vue({
+        var app = new Vue({
             el: "#app",
             data:{
                 message : "So you can't decide. Fine!",
